--- a/css/style.css
+++ b/css/style.css
@@ -23,25 +23,34 @@ $color-white: #fff;
 $color-black: #000; */
 
 
-html,body
-{
-    margin: 0;
-    box-sizing: border-box;
-    padding:0;
+/* Main Nav */
+html {
+    scroll-behavior: smooth;
+    margin: 0px !important;
+    padding: 0px !important;
     width: 100%;
     height: 100%;
-}
+    overflow-x: hidden;
+  }
+  
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0px !important;
+    padding: 0px !important;
+    font-family: "Roboto", sans-serif;
+    position: relative;
+    overflow-x: hidden;
+  }
 
-/* Main Nav */
 .header_nav .main_menu .navbar
 {
     backface-visibility: hidden;
 }
 
-.navbar-brand >img
+.navbar-brand > img
 {
     padding: 0rem 2rem 0rem 1rem;
-    z-index: 100px;
 }
 
 .header_nav .main_menu .nav-item .nav-link
@@ -72,7 +81,7 @@ html,body
 
 .main-site .site-banner .site-title 
 {
-    padding-left: 15%;
+   padding-left: 15%;
 }
 
 .main-site .site-banner .site-title h3
@@ -166,6 +175,7 @@ html,body
 .para
 {
     padding: .4rem 0;
+    font-family: "Roboto", sans-serif;
 }
 
 
@@ -175,12 +185,13 @@ html,body
 {
     background-color: #f7f7f7;
 }
+
 .project
 {
     font-family: "Roboto",sans-serif;
     font-weight: 700;
     font-size: 3rem;
-    letter-spacing: 15px;
+    letter-spacing: 5px;
     background-image: linear-gradient(to right, #7ed56f,#28b485);
     -webkit-background-clip: text;
     color: transparent;    
@@ -217,7 +228,7 @@ html,body
     font-family: "Roboto",sans-serif;
     font-weight: 700;
     font-size: 3rem;
-    letter-spacing: 8px;
+    letter-spacing: 6px;
     background-image: linear-gradient(to right, #7ed56f,#28b485);
     -webkit-background-clip: text;
     color: transparent;    
@@ -250,29 +261,16 @@ html,body
 }
 
 /* Maps */
-.map-container
-{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
-}
-    
-.map-container iframe
-{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
-}
+/* .mapouter{position:relative;text-align:right;width:100%;height:100%;}
+.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:100%;}
+.gmap_iframe {height:400px!important;} */
+
+.mapouter{position:relative;text-align:right;width:100%;height:430px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:430px;}.gmap_iframe {height:430px!important;}
 
 /* Footer */
-
-.section-footer
+.page-footer
 {
-    padding: 5rem 0;
-    font-size: 1.4rem;
+    font-family: "Roboto", sans-serif;
 }
 
 
