--- a/css/style.css
+++ b/css/style.css
@@ -265,8 +265,17 @@ html {
 .gmap_canvas {overflow:hidden;background:none!important;width:100%;height:100%;}
 .gmap_iframe {height:400px!important;} */
 
-.mapouter{position:relative;text-align:right;width:100%;height:430px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:430px;}.gmap_iframe {height:430px!important;}
+.g-map {
+    
+    display: flex;
+    justify-content: center;  
+    align-items: center;
+    margin-bottom: 10vh;
+}
 
+.g-map iframe {
+    display: block;
+}
 /* Footer */
 .page-footer
 {
