--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url(./fonts.css);
 
-/* COLORS */
+/* COLOR PICKER */
 /* 
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
@@ -106,6 +106,45 @@ html {
   font-size: 3rem;
 }
 
+.head2
+{
+    position: relative;
+    font-size: 14vw;
+    color: #fff;
+    -webkit-text-stroke: 0.3vw #fff;
+    white-space: nowrap;
+}
+
+.head2::before
+{
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    color: #55c57a;
+    -webkit-text-stroke: 0.3vw #55c57a;
+    border-right: 2px solid #55c57a;
+    overflow: hidden;
+    animation: animate 6s linear infinite;
+}
+
+@keyframes animate
+{
+    0%,10%,100%
+    {
+        width: 0;
+    }
+
+    40%,60%
+    {
+        width: 90%;
+    }
+}
+
 .main-site .site-banner .site-title h4
 {
   font-size: 1.5rem;
@@ -146,6 +185,10 @@ html {
     background: #55c57a;
 }
 
+
+
+
+
 /* Section-About */
 
 .section-about
@@ -177,6 +220,10 @@ html {
     padding: .4rem 0;
     font-family: "Roboto", sans-serif;
 }
+
+
+
+
 
 
 /* Section Project */
@@ -217,6 +264,11 @@ html {
     box-shadow:0px 10px 30px rgba(57, 56, 61, 0.205);
 }
 
+
+
+
+
+
 /* Contacts */
 .section-contact
 {
@@ -225,7 +277,7 @@ html {
 
 .contact
 {
-    font-family: "Roboto",sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 3rem;
     letter-spacing: 6px;
@@ -260,11 +312,6 @@ html {
     border-bottom: 3px solid orange;
 }
 
-/* Maps */
-/* .mapouter{position:relative;text-align:right;width:100%;height:100%;}
-.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:100%;}
-.gmap_iframe {height:400px!important;} */
-
 .g-map {
     
     display: flex;
@@ -276,10 +323,103 @@ html {
 .g-map iframe {
     display: block;
 }
+
+
+
+
 /* Footer */
-.page-footer
+
+footer h6
 {
     font-family: "Roboto", sans-serif;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+
+.btn-footer 
+{
+    color: black;
+    text-decoration: none;
+    border: 1px solid;
+    border-radius: 43px;
+    font-size: 13px;
+    padding: 7px 30px;
+    line-height: 47px;
+    transition: all .2s ease;               
+}
+     
+.btn-footer:hover 
+{
+                
+    text-decoration: none;
+             
+}
+
+.form-footer input[type="text"] 
+{
+    border: none;
+    border-radius: 16px 0 0 16px;
+    outline: none;
+    padding-left: 10px;
+    
+}
+
+::placeholder 
+{
+    font-size: 10px;
+    padding-left: 10px;
+    font-style: italic;
+}
+
+.form-footer input[type="button"] 
+{
+    border: none;
+    background:#232323;
+    margin-left: -5px;
+    color: #fff;
+    outline: none;
+    border-radius: 0 16px 16px 0;
+    padding: 2px 12px;
+}
+
+.social .fa 
+{
+    color: grey;
+    font-size: 22px;
+    padding: 10px 15px;
+    background: #3c3c3c;
+}
+
+footer ul li 
+{
+    list-style: none;
+    display: block;
+}
+
+footer ul  
+{
+   padding-left: 0;
+}
+
+footer ul  li a
+{
+  text-decoration: none;
+  color: black;
+  text-decoration:none;
+}
+
+a:hover 
+{
+    text-decoration: none;
+    color: #5643fa !important;
+    
+}
+
+.logo-part 
+{
+    border-right: 1px solid #5643fa;
+    height: 100%;
 }
 
 
